--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-Repositório da matéria de Laboratório de Programação (INF029)
+<html>
+
+<head>
+<style>
+
+p {font-family: Arial; font-size: 10px}
+h1 {font-size: 50px; color: blue;}
+
+</style>
+
+</title> INF029</title>
+
+</head>
+
+</html>
